--- a/index.html
+++ b/index.html
@@ -15,15 +15,50 @@
   <script type="module" src=" https://cdn.jsdelivr.net/npm/@google/model-viewer/dist/model-viewer-module.min.js "></script>
   <script type="module" src=" https://cdn.jsdelivr.net/npm/@google/model-viewer-effects/dist/model-viewer-effects.min.js "></script>
 
-  <!-- css can be adapted/changes/removes as needed -->
-  <link rel="stylesheet" href="style.css">
+  <style>
+  model-viewer {  width:100%;height: 900px}
+   .hotspot {
+                    display: block;
+                    width: 20px;
+                    height: 20px;
+                    border-radius: 10px;
+                    border: none;
+                    background-color: #FF4D00;
+                    box-sizing: border-box;
+                    pointer-events: none;
+                  }
+
+                  .hotspot[slot="hotspot-hand"] {
+                    --min-hotspot-opacity: 0;
+                    background-color: red;
+                  }
+
+                  .hotspot[slot="hotspot-foot"]:not([data-visible]) {
+                    background-color: transparent;
+                    border: 3px solid green;
+                  }
+
+                  .annotation {
+                    background-color: darkorange;
+                    position: absolute;
+                    transform: translate(10px, 10px);
+                    border-radius: 5px;
+                    padding: 10px;
+                    width:5rem;
+                    color: white;
+                  }
+
+</style>
 
   <title>3D Model Viewer</title>
 </head>
 
 <body>
   <!-- model-viewer and script must be kept as is to guarantee correct visualisation -->
-  <model-viewer exposure="-5" id="device" camera-controls touch-action="pan-y" max-camera-orbit="auto 90deg auto"interaction-prompt="none" shadow-softness="1" src="Spiegltec_reduced.glb" skybox-height="1.5m" shadow-intensity="2" environment-image="RetailStore_sw_levels.hdr" ar alt="spiegltec device 3D model">
+  <model-viewer exposure="-5" id="device" camera-controls touch-action="pan-y" max-camera-orbit="auto 90deg auto"interaction-prompt="none" shadow-softness="1" src="modelToViewv2.glb" skybox-height="1.5m" shadow-intensity="2" environment-image="RetailStore_sw_levels.hdr" ar alt="spiegltec device 3D model">
+    <button class="hotspot" slot="hotspot-foot" data-position="-0.93 1 0.85" data-normal="0 0 1" data-visibility-attribute="visible">
+       <div class="annotation" >I am a pipe!</div>
+     </button>
    <effect-composer id="composer" render-mode="performance">
     <selective-bloom-effect strength="5" radius="0.1" threshold="0.0"></selective-bloom-effect>
   </effect-composer>
