added color reset button and roughness versions

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>3D showcase</title>
 </head>
 <body>
-  <a href="/engel/engelTest.html">Engel Machine</a></br>
+  <a href="/engel/engelTestMap.html">Engel Machine (with roughness map)</a></br>
+  <a href="/engel/engelTestNoMap.html">Engel Machine (no roughness map)</a></br>
   <a href="/plane/indexHangarTest.html">Plane</a>
 </body>
 
